--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
-  },
   "name": "p2-iproject-server",
-  "description": "Individual Project - Server Ode Afdal Data Aset KIB Dinas PK Daerah",
   "version": "1.0.0",
+  "description": "Individual Project - Server Ode Afdal Data Aset KIB Dinas PK Daerah",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/alizta27/p2-iproject-server/issues"
   },
-  "homepage": "https://github.com/alizta27/p2-iproject-server#readme"
+  "homepage": "https://github.com/alizta27/p2-iproject-server#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
+  }
 }
