--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Individual Project - Server Ode Afdal Data Aset KIB Dinas PK Daerah",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --detectOpenHandles, --forceExit --runInBand",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,9 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.2"
   }
 }
