all current routings working properly

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MIDTRANS_API = Basic U0ItTWlkLXNlcnZlci16VGFvUkJUaThRTDJfZG5iUzVFdHJsT2I6TWFrZW1
 WATCHMODE_API_KEY = a71ce9127dmshf81388b9a3b880dp1c2125jsnd4d7b66437ca
 WATCHMODE2_API_KEY = 07GRC5So2mhgaxaP7CtoYjwAk0kDvDSW4mdJXXLM 
 OTT_API_KEY = a71ce9127dmshf81388b9a3b880dp1c2125jsnd4d7b66437ca
+SECRET_KEY = s3Cr3TT
