--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0",
     "supertest": "^6.2.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
