setup migration & seeding data

--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "natura_iproject_dev",
+    "database": "natura_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "postgres",
-    "database": "natura_iproject_test",
+    "database": "natura_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
