--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/brryar/p2-iproject-server#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "xendit-node": "^1.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
