--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0"
   }
 }
