--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Individual Project - Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,12 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0"
   }
 }
