--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@google-cloud/storage": "^5.18.2",
+    "body-parser": "^1.19.2",
+    "express-fileupload": "^1.3.1",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
+    "xhr2": "^0.2.1"
   }
 }
