--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
