--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
