--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
