--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
     "url": "git+https://github.com/Carageenan/p2-iproject-server.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Muhammad Ihsan Erdiansyah",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Carageenan/p2-iproject-server/issues"
   },
-  "homepage": "https://github.com/Carageenan/p2-iproject-server#readme"
+  "homepage": "https://github.com/Carageenan/p2-iproject-server#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
+  }
 }
