--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "xendit-node": "^1.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
