Login and Register server handling done

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-X_RAPIDAPI_KEY=684497f95dmshefda7ef964012d0p13a647jsn8bed11c0823b
+X_RAPIDAPI_KEY=7aa33a827bmsh2a5fbb08416ebb7p10987cjsnae6d4e27fc33
+
+JWTKEY=JWTKEYUHUY
