--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
     "supertest": "^6.2.2"
