--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Individual Project - Server",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "imgbb-uploader": "^1.3.5",
     "jsonwebtoken": "^8.5.1",
