--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "jest": "^27.5.1",
