--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
