--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "firebase-admin": "^10.0.2"
   }
 }
