--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
   },
