--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"i": "^0.3.7",
 		"nodemon": "^2.0.15",
 		"npm": "^8.5.5"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.0",
+		"firebase-admin": "^10.0.2"
 	}
 }
