--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles, --forceExit --runInBand",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon app.js",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
