--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.4.1"
   }
 }
