--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mwbintang/p2-iproject-server#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -26,7 +27,8 @@
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "vue-hacktiv8-footer": "^0.0.9"
   },
   "devDependencies": {
     "jest": "^27.5.1",
