--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0",
-    "spotify-web-api-node": "^5.0.2"
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
