--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Individual Project - Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,8 @@
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
+  },
+  "engines": {
+    "node": "12.13.x"
   }
 }
