--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
     "xendit-node": "^1.20.1"
