--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dioauliaharrisa/p2-iproject-server-1#readme",
   "dependencies": {
+    "@google-cloud/storage": "^5.18.2",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
