--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
   },
   "homepage": "https://github.com/rosaalwyh/p2-iproject-server#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
-  },
-  "devDependencies": {
-    "axios": "^0.26.1",
+    "sequelize": "^6.17.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "socket.io": "^4.4.1"
+    "jsonwebtoken": "^8.5.1"
   }
 }
