--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "firebase": "^9.6.9",
+    "imagekit": "^3.2.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "xendit-node": "^1.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
