--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "form-data": "^4.0.0",
     "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0",
     "socket.io": "^4.4.1"
