--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ SECRET_KEY=DACfOhzNkPk5izxp6o80
 
 GOOGLE_CLIENT_ID=738933760095-8obmrtek6i09tq2aohfqe62m4svt1im7.apps.googleusercontent.com
 
-GOOGLE_CLIENT_ID=738933760095-8obmrtek6i09tq2aohfqe62m4svt1im7.apps.googleusercontent.com
+Authorization=563492ad6f91700001000001208aada4ab9d4eb3974a44ea037f0e67
