--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
   },
