--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
@@ -19,22 +19,22 @@
   },
   "homepage": "https://github.com/Normiez/p2-iproject-server#readme",
   "dependencies": {
+    "@google-cloud/storage": "^5.18.2",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "sequelize": "^6.17.0"
-  },
-  "devDependencies": {
-    "@google-cloud/storage": "^5.18.2",
-    "body-parser": "^1.19.2",
-    "express-fileupload": "^1.3.1",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0",
     "xhr2": "^0.2.1"
+  },
+  "devDependencies": {
+    "express-fileupload": "^1.3.1",
+    "nodemon": "^2.0.15"
   }
 }
